<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.e_buyad.marvin.e_buyad.LoadPointActivity"
    tools:showIn="@layout/activity_load_point">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3"
        android:textSize="15sp"
        android:text="@string/load_point_misc_text"/>

    <TextView
        android:id="@+id/points"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/no_load_point_text"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:text="@string/point_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/and_text"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/load"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="@string/no_load_point_text"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:text="@string/load_balance_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/load_point_tip_text"/>

</LinearLayout>
