<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.e_buyad.marvin.e_buyad.ProductDetailActivity"
    tools:showIn="@layout/activity_product_detail">

    <TextView
        android:id="@+id/generic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/generic_name_text"/>

    <TextView
        android:id="@+id/generic_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/generic_name"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="Mefenamic Acid"/>

    <TextView
        android:id="@+id/brand_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/brand_text"
        android:layout_below="@id/generic_name_value"
        />

    <TextView
        android:id="@+id/brand_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dolfenal"
        android:layout_below="@id/brand_name"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/dosage_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dosage_text"
        android:textSize="20sp"
        android:layout_below="@id/brand_name_value"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dosage_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dosage_name"
        android:text="120ml"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/price_name"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/price_text"
        android:layout_below="@id/dosage_name_value"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/price_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="100Php"
        android:layout_below="@id/price_name"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/add_shopping_list_button"
        android:layout_width="match_parent"
        android:text="@string/add_to_shopping_list_text"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:onClick="addToShoppingCartOnClick"/>

</RelativeLayout>
