<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/profile_picture_text"
        android:src="@drawable/no_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="match_parent"
        android:layout_below="@id/username">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/address_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/address"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toRightOf="@id/address" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_details"
            android:text="@string/birthday_text"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/birthday_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_details"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/birthday"
            android:textSize="20sp"
            android:layout_toRightOf="@id/birthday" />

        <TextView
            android:id="@+id/osca_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthday"
            android:text="@string/osca_id_text"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/osca_id_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthday_details"
            android:layout_toEndOf="@id/osca_id"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:textSize="20sp"
            android:layout_toRightOf="@id/osca_id" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/osca_id"
            android:text="@string/email_text"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/email_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/osca_id_details"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@id/email"
            android:textSize="20sp"
            android:layout_toRightOf="@id/email"/>
    </RelativeLayout>
</RelativeLayout>
